--- a/index.css
+++ b/index.css
@@ -46,6 +46,11 @@ body, html{
 	height: 25%;
 }
 
+.next-btn{
+	width: 10%;
+	height: 10%;
+}
+
 .main-game-container{
 	display: none;
 }
@@ -56,8 +61,9 @@ body, html{
 	flex-wrap: wrap;
 }
 
-.image-btn{
-
+.next-container{
+	text-align: center;
+	display: none;
 }
 
 .header-container{
