--- a/index.css
+++ b/index.css
@@ -4,9 +4,9 @@
 
 body, html{
 	height: 100%;
-	color: #d8d8d8;
+	color: #f9f9f9;
 	font-size: 24px;
-	background-color: #1b1b1b;
+	background-color: #484848;
 }
 
 /*Make the landing page image take up the whole screen, no white spaces, no margins or padding*/
@@ -22,6 +22,10 @@ body, html{
   	position: fixed;
   	top: 0;
   	left: 0;
+}
+
+.main-game-container{
+	display: none;
 }
 
 .landing-container{
@@ -49,18 +53,12 @@ body, html{
 }
 
 .next-btn{
-	padding: 20px 20px;
-	/*border: 1px solid black;*/
-	/*border-radius: 50%;*/
+	padding: 10px 10px;
 	width: 10%;
 }
 
 .img-btn{
 	width: 90%;
-}
-
-.main-game-container{
-	display: none;
 }
 
 .sprite-container{
@@ -110,7 +108,7 @@ body, html{
 }
 
 .stats, .final-stats{
-	margin: 20px 20px 20px 20px;
+	margin-bottom: 4px;
 }
 
 .next-instructions{
@@ -130,10 +128,6 @@ body, html{
 #skip-btn, #restart-btn{
 	width: 25%;
 	margin: 20px 20px;
-}
-
-.feedback{
-	/*font-size: 14px;*/
 }
 
 /*Media Queries*/
@@ -163,7 +157,7 @@ body, html{
 	}
 
 	.stats, .final-stats{
-	margin: 10px 10px;
+	/*margin: 10px 10px;*/
 	}
 }
 
