--- a/index.css
+++ b/index.css
@@ -62,7 +62,7 @@ body, html{
 }
 
 .sprite-container{
-    border: 2px solid black;
+    /*border: 2px solid black;*/
     margin: auto;
     display: flex;
     flex-direction: row;
