--- a/index.css
+++ b/index.css
@@ -40,6 +40,7 @@ body, html{
 }
 
 .landing-info{
+	padding: 2px 2px;
 	border: 2px solid black;
     position: absolute;
     width: 60%;
@@ -108,11 +109,13 @@ body, html{
 }
 
 .stats, .final-stats{
+	padding: 2px 2px;
 	margin-bottom: 4px;
 }
 
 .next-instructions{
-	margin: 20px 20px 20px 20px;
+	/*margin: 20px 20px 20px 20px;*/
+	padding: 2px 2px;
 }
 
 .row{
